2010-06-16  Chris Sutcliffe  <ir0nh34d@users.sourceforge.net>

	* mingw32/mingw32-binutils.xml: Updated for the 2.20.51-1 release.

2010-06-15  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Fix Makefile.comm bug reported by Chris Sutcliffe.

	* Makefile.in: Itemise standard sub-make goals as top-level defaults.

	* Makefile.com.in (Makefile.sub): Use double quotes in preference to
	single, to avoid shell portability issue with quoted escapes.
	(serial_number): Replace use of unintentionally undefined macro...
	(issue_number): ...with this defined one.

2010-05-04  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Initial import of mingw-dist module.

	* $CVSROOT/mingw-dist: New CVS module directory.
	* mingw32, msys: New subdirectories; created by import.

	* COPYING, ChangeLog, configure.ac, .cvsignore: New files.
	* Makefile.in, Makefile.comm.in, Makefile.stub.in: New files.

	* issue.log.in: New file; use it as template, to initialise...

	* mingw32/issue.log, msys/issue.log: ...these new files.