@@ -21,14 +21,12 @@
           comparison.
         </paragraph>
       </description>
-      <component class="bin">
-        <release tarname="make-3.81-20090914-mingw32-bin.tar.gz" />
-      </component>
-      <!-- no explicit licence file included, but the mingw32-make.1
-      manual page, included in the -bin package, does include the GPLv2
-      notification -->
-      <licence tarname="make-%-mingw32-%-bin.tar" />
-      <source tarname="make-%-mingw32-%-src.tar" />
+      <release tarname="make-3.81.90-20100618-1-mingw32-bin.tar.lzma">
+          <source tarname="make-3.81.90-20100618-1-mingw32-src.tar.lzma" />
+      </release>
+      <release tarname="make-3.81-20090914-mingw32-bin.tar.gz">
+          <source tarname="make-3.81-20090914-mingw32-src.tar.gz" />
+      </release>
     </package>
   </package-collection>
 </software-distribution>
